# client

./: .clang-format  .gitignore  API.ipynb  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  conanfile.py  main.cpp  vcpkg.json
profiles/: raspberry
src/: main.cpp
src/device/: deviceInfo.cpp  deviceInfo.hpp
src/transmit/: api.cpp  api.hpp
